fix gap

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     /* vertical center */
     /* height: 100vh; */
     flex-direction: column;
-    gap: 20px;
+    gap: 25px;
     background: var(--white-color);
 
     width: 320px;
